[workspace]
members = ["rust/rufus-core", "rust/rufus-ffi"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/HELPMEEADICE/rsfus"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
